# regnum-front

./: .dockerignore  .env.local.example  .gitignore  AUTHENTICATION.md  DATA_SANITIZATION.md  DATA_SANITIZATION_SUMMARY.md  Dockerfile  GMAIL_API_SETUP.md  Home.py  Pipfile  README.md  SECURITY_SUMMARY.md  cloudbuild.yaml  docker-compose.yaml  hash_password.sh  load-balancer.yaml  main.py  pyproject.toml  redirect-cloudbuild.yaml  redirect-dockerfile  redirect.py  requirements.txt  run_debug.sh  run_local_dev.sh  secure_regnum_api.sh  test_api_security.py  test_auth.py  test_gmail_api.py  wk_groups
.kiro/steering/: product.md  structure.md  tech.md
.streamlit/: config.toml
docs/: API_SECURITY_SETUP.md  AUTHENTICATION.md  EMAIL_REFACTORING_SUMMARY.md  PASSWORD_HASHING.md  UTILITY_SUMMARY.md
pages/: 0_Login.py  1_Groups.py  1_Home.py  2_Groups.py  2_Regnum.py  5_Duty_Request.py  6_West_Email_Account_Request.py  8_Regnum.py  debug.py  health.py  home.py
tests/: conftest.py  test_1_groups.py  test_8_regnum.py  test_config_oauth.py  test_data_sanitizer.py  test_google_oauth.py
utils/: __init__.py  api.py  auth.py  auth_middleware.py  config.py  config.toml  data_sanitizer.py  debug_tools.py  email.py  filter_legacy.py  google_oauth.py  group_map.json  group_map.json.txt  group_map_simplified.json  import_json.py  jwt_auth.py  locations_data.json  logger.py  password_hasher.py  pdata.py  queries.py  recaptcha.py
utils/one_offs/: group_map_filtered.json  import_pdata.py  openapi.json  pdata.py
utils/recaptcha_widget/: index.html
