[project]
name = "regnum-front"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.13.5",
    "bcrypt==5.0.0",
    "cryptography==46.0.7",
    "fastapi==0.135.3",
    "google-api-python-client==2.194.0",
    "google-auth==2.49.1",
    "google-auth-oauthlib==1.3.1",
    "google-cloud-logging==3.15.0",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pyjwt==2.12.1",
    "requests==2.33.1",
    "streamlit==1.56.0",
    "streamlit-authenticator==0.4.2",
    "toml==0.10.2",
    "uvicorn==0.44.0",
]
